compiler/testData/diagnostics/tests/EmptyThrow.kt
// FIR_IDENTICAL
fun someFun(i:Int) {
    val x = i ?: throw<!SYNTAX!><!>
}
